[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/animations/ice_idle/ice_fram2.png" type="Texture" id=2]
[ext_resource path="res://assets/animations/fire_idle/fram3.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/intro.png" type="Texture" id=4]
[ext_resource path="res://assets/scripts/CharacterSelect.gd" type="Script" id=5]
[ext_resource path="res://assets/animations/ice_idle/ice_fram1.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/ice_idle/ice_fram3.png" type="Texture" id=7]
[ext_resource path="res://assets/animations/ice_idle/ice_fram4.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/fire_idle/fram4.png" type="Texture" id=9]
[ext_resource path="res://assets/animations/fire_idle/fram1.png" type="Texture" id=10]
[ext_resource path="res://assets/animations/fire_idle/fram2.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 9 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "ice",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Label" type="Label" parent="."]
margin_left = 256.0
margin_top = 60.0
margin_right = 768.0
margin_bottom = 137.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "CHARACTER SELECT"
align = 1
valign = 1

[node name="ContinueBtn" type="Button" parent="."]
visible = false
margin_left = 800.0
margin_top = 500.0
margin_right = 992.0
margin_bottom = 570.0

[node name="Label" type="Label" parent="ContinueBtn"]
margin_right = 192.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "CONTINUE"
align = 1
valign = 1

[node name="fire_char" type="AnimatedSprite" parent="."]
position = Vector2( 791, 374 )
scale = Vector2( 5.25, 5.25 )
frames = SubResource( 3 )
animation = "fire"
frame = 2
speed_scale = 1.5
playing = true
flip_h = true

[node name="ice_char" type="AnimatedSprite" parent="."]
position = Vector2( 249, 375 )
scale = Vector2( 5.25, 5.25 )
frames = SubResource( 3 )
animation = "ice"
frame = 1
speed_scale = 1.5
playing = true

[node name="ReturnBtn" type="Button" parent="."]
margin_left = 46.0
margin_top = 46.0
margin_right = 211.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="ReturnBtn"]
margin_left = 32.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "GO BACK"
align = 1
valign = 1

[connection signal="pressed" from="ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="ReturnBtn" to="." method="_on_ReturnBtn_pressed"]
